force-app/main/default/objects/SOI_Venue_timetable__c/SOI_Venue_timetable__c.object-meta.xml
<CustomObject>
    <label>Timetable</label>
    <nameField>
        <label>Sport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venue_timetables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>