force-app/main/default/objects/SOI_Venue_timetable__c/fields/ClubVenueRelationShipAttribute_ID__c.field-meta.xml
<CustomField>
    <fullName>ClubVenueRelationShipAttribute_ID__c</fullName>
    <label>ClubVenueRelationShipAttribute_ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>