force-app/main/default/objects/SOI_Venue_timetable__c/fields/ClubVenueRelationshipID__c.field-meta.xml
<CustomField>
    <fullName>ClubVenueRelationshipID__c</fullName>
    <label>ClubVenueRelationshipID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>