force-app/main/default/objects/SOI_Venue_timetable__c/fields/FRI__c.field-meta.xml
<CustomField>
    <fullName>FRI__c</fullName>
    <formula>TEXT(HOUR( friStart__c ))+ &#39;:&#39; + IF(MINUTE( friStart__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( friStart__c )), TEXT(MINUTE( friStart__c )))
+ &#39;-&#39; +
TEXT(HOUR( friEnd__c )) + &#39;:&#39; + IF(MINUTE( friEnd__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( friEnd__c )), TEXT(MINUTE( friEnd__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FRI</label>
    <type>Text</type>
</CustomField>