force-app/main/default/objects/SOI_Venue_timetable__c/fields/friEnd__c.field-meta.xml
<CustomField>
    <fullName>friEnd__c</fullName>
    <label>Friday End</label>
    <type>Time</type>
</CustomField>