force-app/main/default/objects/SOI_Venue_timetable__c/fields/friStart__c.field-meta.xml
<CustomField>
    <fullName>friStart__c</fullName>
    <label>Friday Start</label>
    <type>Time</type>
</CustomField>