force-app/main/default/objects/SOI_Venue_timetable__c/fields/MON__c.field-meta.xml
<CustomField>
    <fullName>MON__c</fullName>
    <formula>TEXT(HOUR( monStart__c ))+ &#39;:&#39; + IF(MINUTE( monStart__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( monStart__c )), TEXT(MINUTE( monStart__c )))
+ &#39;-&#39; +
TEXT(HOUR( monEnd__c )) + &#39;:&#39; + IF(MINUTE( monEnd__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( monEnd__c )), TEXT(MINUTE( monEnd__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MON</label>
    <type>Text</type>
</CustomField>