force-app/main/default/objects/SOI_Venue_timetable__c/fields/monEnd__c.field-meta.xml
<CustomField>
    <fullName>monEnd__c</fullName>
    <label>Monday End</label>
    <type>Time</type>
</CustomField>