force-app/main/default/objects/SOI_Venue_timetable__c/fields/monStart__c.field-meta.xml
<CustomField>
    <fullName>monStart__c</fullName>
    <label>Monday Start</label>
    <type>Time</type>
</CustomField>