force-app/main/default/objects/SOI_Venue_timetable__c/fields/SAT__c.field-meta.xml
<CustomField>
    <fullName>SAT__c</fullName>
    <formula>TEXT(HOUR( satStart__c ))+ &#39;:&#39; + IF(MINUTE( satStart__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( satStart__c )), TEXT(MINUTE( satStart__c )))
+ &#39;-&#39; +
TEXT(HOUR( satEnd__c )) + &#39;:&#39; + IF(MINUTE( satEnd__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( satEnd__c )), TEXT(MINUTE( satEnd__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAT</label>
    <type>Text</type>
</CustomField>