force-app/main/default/objects/SOI_Venue_timetable__c/fields/satEnd__c.field-meta.xml
<CustomField>
    <fullName>satEnd__c</fullName>
    <label>satEnd</label>
    <type>Time</type>
</CustomField>