force-app/main/default/objects/SOI_Venue_timetable__c/fields/satStart__c.field-meta.xml
<CustomField>
    <fullName>satStart__c</fullName>
    <label>satStart</label>
    <type>Time</type>
</CustomField>