force-app/main/default/objects/SOI_Venue_timetable__c/fields/SOI_ActionLabel__c.field-meta.xml
<CustomField>
    <fullName>SOI_ActionLabel__c</fullName>
    <formula>IF( TEXT(SOI_Status__c) = &#39;Deleted&#39;, &#39;Undelete&#39;, &#39;Delete&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOI_ActionLabel</label>
    <type>Text</type>
</CustomField>