force-app/main/default/objects/SOI_Venue_timetable__c/fields/SOI_Club__c.field-meta.xml
<CustomField>
    <fullName>SOI_Club__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOI_Club</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Venue_timetables</relationshipName>
    <type>Lookup</type>
</CustomField>