force-app/main/default/objects/SOI_Venue_timetable__c/fields/SOI_IsNew__c.field-meta.xml
<CustomField>
    <fullName>SOI_IsNew__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SOI_IsNew</label>
    <type>Checkbox</type>
</CustomField>