force-app/main/default/objects/SOI_Venue_timetable__c/fields/SOI_MarkInactive__c.field-meta.xml
<CustomField>
    <fullName>SOI_MarkInactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this checkbox if the timetable is no longer in use</inlineHelpText>
    <label>Remove</label>
    <type>Checkbox</type>
</CustomField>