force-app/main/default/objects/SOI_Venue_timetable__c/fields/SOI_Sport__c.field-meta.xml
<CustomField>
    <fullName>SOI_Sport__c</fullName>
    <label>SOI_Sport</label>
    <length>100</length>
    <type>Text</type>
</CustomField>