force-app/main/default/objects/SOI_Venue_timetable__c/fields/SOI_Status__c.field-meta.xml
<CustomField>
    <fullName>SOI_Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>SOI_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SOI_Status</valueSetName>
    </valueSet>
</CustomField>