force-app/main/default/objects/SOI_Venue_timetable__c/fields/SOI_Venue__c.field-meta.xml
<CustomField>
    <fullName>SOI_Venue__c</fullName>
    <label>SOI_Venue</label>
    <referenceTo>SOI_Venue__c</referenceTo>
    <relationshipLabel>Venue_timetables</relationshipLabel>
    <relationshipName>Venue_timetables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>