force-app/main/default/objects/SOI_Venue_timetable__c/fields/Sport_Name__c.field-meta.xml
<CustomField>
    <fullName>Sport_Name__c</fullName>
    <inlineHelpText>Choose a sport the timeline is for</inlineHelpText>
    <label>Sport_Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>