force-app/main/default/objects/SOI_Venue_timetable__c/fields/SUN__c.field-meta.xml
<CustomField>
    <fullName>SUN__c</fullName>
    <formula>TEXT(HOUR( sunStart__c ))+ &#39;:&#39; + IF(MINUTE( sunStart__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( sunStart__c )), TEXT(MINUTE( sunStart__c )))
+ &#39;-&#39; +
TEXT(HOUR( sunEnd__c )) + &#39;:&#39; + IF(MINUTE( sunEnd__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( sunEnd__c )), TEXT(MINUTE( sunEnd__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUN</label>
    <type>Text</type>
</CustomField>