force-app/main/default/objects/SOI_Venue_timetable__c/fields/sunEnd__c.field-meta.xml
<CustomField>
    <fullName>sunEnd__c</fullName>
    <label>sunEnd</label>
    <type>Time</type>
</CustomField>