force-app/main/default/objects/SOI_Venue_timetable__c/fields/sunStart__c.field-meta.xml
<CustomField>
    <fullName>sunStart__c</fullName>
    <label>Sunday Start</label>
    <type>Time</type>
</CustomField>