force-app/main/default/objects/SOI_Venue_timetable__c/fields/THU__c.field-meta.xml
<CustomField>
    <fullName>THU__c</fullName>
    <formula>TEXT(HOUR( ThuStart__c ))+ &#39;:&#39; + IF(MINUTE( ThuStart__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( ThuStart__c )), TEXT(MINUTE( ThuStart__c )))
+ &#39;-&#39; +
TEXT(HOUR( ThuEnd__c )) + &#39;:&#39; + IF(MINUTE( ThuEnd__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( ThuEnd__c )), TEXT(MINUTE( ThuEnd__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>THU</label>
    <type>Text</type>
</CustomField>