force-app/main/default/objects/SOI_Venue_timetable__c/fields/ThuEnd__c.field-meta.xml
<CustomField>
    <fullName>ThuEnd__c</fullName>
    <label>ThuEnd</label>
    <type>Time</type>
</CustomField>