force-app/main/default/objects/SOI_Venue_timetable__c/fields/ThuStart__c.field-meta.xml
<CustomField>
    <fullName>ThuStart__c</fullName>
    <label>Thursday Start</label>
    <type>Time</type>
</CustomField>