force-app/main/default/objects/SOI_Venue_timetable__c/fields/TUE__c.field-meta.xml
<CustomField>
    <fullName>TUE__c</fullName>
    <formula>TEXT(HOUR( TueStart__c ))+ &#39;:&#39; + IF(MINUTE( TueStart__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( TueStart__c )), TEXT(MINUTE( TueStart__c )))
+ &#39;-&#39; +
TEXT(HOUR( TueEnd__c )) + &#39;:&#39; + IF(MINUTE( TueEnd__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( TueEnd__c )), TEXT(MINUTE( TueEnd__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TUE</label>
    <type>Text</type>
</CustomField>