force-app/main/default/objects/SOI_Venue_timetable__c/fields/TueEnd__c.field-meta.xml
<CustomField>
    <fullName>TueEnd__c</fullName>
    <label>Tuesday End</label>
    <type>Time</type>
</CustomField>