force-app/main/default/objects/SOI_Venue_timetable__c/fields/TueStart__c.field-meta.xml
<CustomField>
    <fullName>TueStart__c</fullName>
    <label>Tuesday Start</label>
    <type>Time</type>
</CustomField>