force-app/main/default/objects/SOI_Venue_timetable__c/fields/Venue_ImportID__c.field-meta.xml
<CustomField>
    <fullName>Venue_ImportID__c</fullName>
    <label>Venue_ImportID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>