force-app/main/default/objects/SOI_Venue_timetable__c/fields/Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Venue_Name__c</fullName>
    <formula>SOI_Venue__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue_Name</label>
    <type>Text</type>
</CustomField>