force-app/main/default/objects/SOI_Venue_timetable__c/fields/WED__c.field-meta.xml
<CustomField>
    <fullName>WED__c</fullName>
    <formula>TEXT(HOUR( wedStart__c ))+ &#39;:&#39; + IF(MINUTE( wedStart__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( wedStart__c )), TEXT(MINUTE( wedStart__c )))
+ &#39;-&#39; +
TEXT(HOUR( wedEnd__c )) + &#39;:&#39; + IF(MINUTE( wedEnd__c )&lt;10, &#39;0&#39; + TEXT(MINUTE( wedEnd__c )), TEXT(MINUTE( wedEnd__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WED</label>
    <type>Text</type>
</CustomField>