force-app/main/default/objects/SOI_Venue_timetable__c/fields/wedEnd__c.field-meta.xml
<CustomField>
    <fullName>wedEnd__c</fullName>
    <label>wedEnd</label>
    <type>Time</type>
</CustomField>