force-app/main/default/objects/SOI_Venue_timetable__c/fields/wedStart__c.field-meta.xml
<CustomField>
    <fullName>wedStart__c</fullName>
    <label>wedStart</label>
    <type>Time</type>
</CustomField>